# Agentic-AI

./: ASimpleAgentFramework3.ipynb  AgentLoopWithFunctionCalling.ipynb  AgentLoopWithFunctionCalling2.ipynb  Agent_Loop.ipynb  Building_a_Simple_Agent_Framework_2.ipynb  C1M1_Lab_2_automatic_deep_research.ipynb  Copy_of_AgentWithTools.ipynb  DALL E Image generation Guide for Beginners.ipynb  Explore Advanced Retrievers in LlamaIndex.ipynb  L2_research_write_article.ipynb  L3_customer_support (1).ipynb  L3_customer_support.ipynb  L4_tools_customer_outreach.ipynb  L5_tasks_event_planning.ipynb  L6_collaboration_financial_analysis.ipynb  L7_job_application_crew.ipynb  LLM-Powered Data Science LCEL.ipynb  LLM_Function_Calling.ipynb  L_5.ipynb  ProgrammaticPrompting1.ipynb  Programming_for_agents.ipynb  Summarize private documents using RAG LangChain and LLMs.ipynb  Use Mixtral and gTTS to create your personal storyteller.ipynb  gradio_test.py
Deep researcher/: C1M2_Lab_1_deep_research_p1.ipynb  research_report.md
Project/: L_6.ipynb
Project/new_project/: report.md
Sales_agent/: L_3.ipynb  crewai_flow.html  crewai_flow_complex.html
agent_test_training/: L_4.ipynb  training.pkl
card_intelligence_system/: README.md  pyproject.toml
card_intelligence_system/src/singapore_credit_card_intelligence_system/: crew.py  main.py
card_intelligence_system/src/singapore_credit_card_intelligence_system/config/: agents.yaml  tasks.yaml
code review/: C1M2_Assignment.ipynb  result.dill
project progress/: L_2.ipynb
project_planning/: L_1.ipynb
