[project]
name = "singapore_credit_card_intelligence_system"
version = "0.1.0"
description = "singapore_credit_card_intelligence_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.13.0",
]

[project.scripts]
singapore_credit_card_intelligence_system = "singapore_credit_card_intelligence_system.main:run"
run_crew = "singapore_credit_card_intelligence_system.main:run"
train = "singapore_credit_card_intelligence_system.main:train"
replay = "singapore_credit_card_intelligence_system.main:replay"
test = "singapore_credit_card_intelligence_system.main:test"
run_with_trigger = "singapore_credit_card_intelligence_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
